--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
-    "expo": "~52.0.40",
+    "axios": "^1.8.4",
+    "expo": "~52.0.41",
     "expo-font": "^13.0.4",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
@@ -29,7 +30,7 @@
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^5.0.0",
     "tailwindcss": "^3.4.17"
