--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,12 +33,13 @@
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^5.0.0",
+    "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@react-native-community/cli": "latest",
     "@babel/core": "^7.25.2",
-    "@expo/metro-config": "^0.19.12"
+    "@expo/metro-config": "^0.19.12",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
