--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/metro-runtime": "~4.0.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -21,25 +19,27 @@
     "@react-navigation/native-stack": "^7.3.1",
     "axios": "^1.8.4",
     "expo": "^52.0.42",
+    "expo-application": "^6.0.2",
+    "expo-auth-session": "~6.0.3",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "^14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.8",
-    "react-native-css-interop": "^0.1.22",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-navigation": "^5.0.0",
-    "tailwind-rn": "^4.2.0",
-    "tailwindcss": "^3.4.17"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/metro-config": "^0.19.12",
-    "@react-native-community/cli": "latest"
+    "@react-native-community/cli": "latest",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
