--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -86,9 +86,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.frontend'
+    namespace 'com.mypetcard.mypetcard'
     defaultConfig {
-        applicationId 'com.anonymous.frontend'
+        applicationId 'com.mypetcard.mypetcard'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
