--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "expo-application": "^6.0.2",
     "expo-auth-session": "~6.0.3",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "^16.0.6",
     "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "^14.0.2",
@@ -36,6 +37,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
