--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "license": "MIT",
   "author": "Lovro Bilanović",
-  "type": "commonjs",
+  "type": "module",
   "main": "app.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,11 +18,10 @@
     "express": "^4.21.2",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-  },
-  
-  "type":"module"
+  }
 }
