--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "expo": "^52.0.42",
     "expo-application": "^6.0.2",
     "expo-auth-session": "~6.0.3",
@@ -41,7 +42,8 @@
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
