--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -29,8 +29,12 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
+# Environment variables
+.env
+.env.test
+.env.local
+.env.development.local
+.env.production.local
 
 # typescript
 *.tsbuildinfo
