--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "^14.0.2",
@@ -34,16 +35,16 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.12",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-navigation": "^5.0.0",
-    "expo-linear-gradient": "~14.0.2"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
