--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
+    "@stripe/stripe-react-native": "^0.39.0",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "expo": "^52.0.42",
